<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.scode.exercise02MyIntent.IntentResultActivity"
    android:background="@color/uiCustomeColor1">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/plainYogi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:padding="16dp"
            android:layout_margin="16dp"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@android:color/white"
            app:cornerRadius="16dp"
            android:text="@string/choose_the_number"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="8dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:background="@color/uiCustomeColor"
            app:layout_constraintEnd_toEndOf="@+id/plainYogi"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/plainYogi"
            app:layout_constraintTop_toBottomOf="@+id/plainYogi">

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_radio_satu"
                android:layout_width="wrap_content"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="true"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:text="@string/_50"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="99dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_radio_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:useMaterialThemeColors="true"
                android:textColor="@android:color/white"
                android:text="@string/_100" />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_radio_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:useMaterialThemeColors="true"
                android:textColor="@android:color/white"
                android:text="@string/_150" />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_radio_empat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="true"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:text="@string/_200" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_choose_number"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/choose"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>
