<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/uiCustomeColor1"
                                                   tools:context="id.scode.exercise02MyIntent.IntentScodExercise"
                                                   android:id="@+id/clayout_menu_intent">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_activity"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/moveactivity"
            android:background="@drawable/buttondraw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_w_data"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/move_with_data"
            android:background="@drawable/buttondraw"
            app:layout_constraintEnd_toEndOf="@+id/btn_move_activity"
            app:layout_constraintStart_toStartOf="@+id/btn_move_activity"
            app:layout_constraintTop_toBottomOf="@+id/btn_move_activity"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_w_object"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/move_with_object"
            android:background="@drawable/buttondraw"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:layout_constraintEnd_toEndOf="@+id/btn_move_w_data"
            app:layout_constraintStart_toStartOf="@+id/btn_move_w_data"
            app:layout_constraintTop_toBottomOf="@+id/btn_move_w_data"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_dial_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttondraw"
            android:text="@string/dial_a_number"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:layout_constraintEnd_toEndOf="@+id/btn_move_w_object"
            app:layout_constraintStart_toStartOf="@+id/btn_move_w_object"
            app:layout_constraintTop_toBottomOf="@+id/btn_move_w_object"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_move_activity_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttondraw"
            android:text="@string/move_activity_for_result"
            app:layout_constraintEnd_toEndOf="@+id/btn_move_dial_num"
            app:layout_constraintStart_toStartOf="@+id/btn_move_dial_num"
            app:layout_constraintTop_toBottomOf="@+id/btn_move_dial_num"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_result_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/resutl_from_activity"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_move_activity_result"
            app:layout_constraintStart_toStartOf="@+id/btn_move_activity_result"
            app:layout_constraintTop_toBottomOf="@+id/btn_move_activity_result"/>


</androidx.constraintlayout.widget.ConstraintLayout>
